<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="second_fragment_label">Your Second Label Here</string>
    <string name="first_fragment_label">Your Label Here</string>
    <string name="app_name">My Application</string>
    <string name="main_title">English Developer for\n State Exam</string>
    <string name="main_subtitle">Start preparing</string>
    <string name="title_activity_preparing_sections">PreparingSections</string>
    <string name="reading_section">Reading</string>
    <string name="listening_section">Listening</string>
    <string name="writing_section">Writing</string>
    <string name="grammar_section">Grammar</string>
    <string name="speaking_section">Speaking</string>
    <string name="Sections">Sections</string>
    <string name="Task_1">Task № 1</string>
    <string name="Task_2">Task № 2</string>
    <string name="Task_3">Task № 3</string>
    <string name="Check_answer">Проверить ответ</string>
    <string name="reading_exercise_task1">Прочитайте текст.
Выберите из предложенных заголовков правильный вариант.</string>
    <string name="reading_exercise_view_task1">A Golden Birthday is a special, unique event that occurs when a person turns the age similar to a birth date.
For example, a girl who celebrates her birthday on the 17th of June will have a golden birthday in the year she turns 17.
A person who is older than 31 years will have already passed the only golden birthday and will not have it again.
Many people miss their golden birthdays because it is not a wellknown celebration.</string>
    <string name="reading_task1_RB.A">A. Crafty celebrations</string>
    <string name="reading_task1_RB.B">B. Playing at a birthday</string>
    <string name="reading_task1_RB.C">C. Once-in-a-lifetimes</string>
    <string name="reading_exercise_task2">Прочитайте текст и заполните пропуск.</string>
    <string name="reading_exercise_view_task2">Usually, when you study abroad through your university, you get asked the big question: homestay or dorm? Loads of the people in my Japanese
        language class um-ed and ah-ed over the choice. But not me. There was no way I was going to go to Japan and _____________ .
    </string>
    <string name="reading_task2_RB.A">A. Not totally immerse myself in the culture</string>
    <string name="reading_task2_RB.B">B. And my privacy is respected totally</string>
    <string name="reading_task2_RB.C">C. To impose curfews on their international guests</string>
    <string name="reading_exercise_task3">Прочитайте текст. Ответьте на вопрос.
 The title of the story actually implies that the?</string>
    <string name="reading_exercise_view_task3">Reunion.\nThe last time I saw my father was in Grand Central Station.I was going from my grandmother\'s in the Adirondacks to a cottage on the Cape that my mother had rented, and I wrote my father that I would be in New York between trains for an hour and a half, and asked if we could have lunch together. His secretary wrote to say that he would meet me at the information booth at noon, and at twelve o\'clock sharp I saw him coming through the crowd. He was a big, good-looking man, and I was terribly happy to see him again.
</string>
    <string name="reading_exercise_question_task3"></string>
    <string name="reading_task3_RB.A">A. son found his lost father after decades of separation.</string>
    <string name="reading_task3_RB.B">B. son made an attempt to re-establish relations with his father.</string>
    <string name="reading_task3_RB.C">C. son would now be living together with his father.</string>

    <string name="reading_R.B.1">A. Crafty celebrations</string>
    <string name="reading_R.B.2">B. Playing at a birthday</string>
    <string name="reading_R.B.3">C. Months for celebrations</string>
    <string name="reading_R.B.4">D. An old tradition</string>
    <string name="reading_R.B.5">E. The birthday weekend</string>
    <string name="reading_R.B.6">F. A secret preparation</string>
    <string name="reading_R.B.7">G. Once-in-a-lifetime</string>
    <string name="reading_R.B.8">H. Expressing greetings</string>
    <string name="writing_section_task_1_exercise">You have received an email message from your English-speaking pen-friend Sandra:</string>
    <string name="email_from">Sandra@mail.uk</string>
    <string name="email_to">Russian_friend@ege.ru</string>
    <string name="email_subject">Grandparents</string>
    <string name="email_text">…Next week I am going to visit my grandparents. I am so happy! Where do your grandparents live? How often do you see them? Why do elderly people in your country sometimes live with their children and grandchildren?
Yesterday I took part in a national dance festival…</string>
    <string name="email_writing_exercise">Write an email to Sandra.\nIn your message:\n− answer her questions;\n− ask 3 questions about the festival.</string>
    <string name="email_writing_rule">Write 100–140 words.\nRemember the rules of email writing.</string>
    <string name="reading_answers_task1">Правильный ответ C</string>
    <string name="reading_answers_task2">Правильный ответ A</string>
    <string name="reading_answers_task3">Правильный ответ C</string>
    <string name="listening_task1.0">Вы услышите 6 высказываний. Установите соответствие между высказываниями каждого говорящего A–F и утверждениями,
данными в списке 1–7. Используйте каждое утверждение, обозначенное соответствующей цифрой, только один раз. В задании есть одно лишнее утверждение.
Вы услышите запись дважды. Занесите свои ответы в таблицу.</string>
    <string name="listening_task_1_answers">Right answers:412356</string>
    <string name="listening_task_2_answers">Right answers:2131321</string>
    <string name="listening_task_3_answers">Right answers:2133211</string>
    <string name="listening_task1.1">1. I have a routine to keep communication going.\n2. My relative was right after all.\n3. How open should I be?\n4. I\'m showing that I care my way.\n5. I\'m seen as a carer.\n6. I said yes to a different kind of experience.\n7. I\'d like to feel more independent.</string>
    <string name="listening_task2.0">Вы услышите диалог. Определите, какие из приведённых утверждений А–G соответствуют содержанию текста (1 – True), какие не соответствуют (2 – False) и о чём в тексте не сказано (3 – Not stated). Занесите номер выбранного Вами варианта ответа в таблицу. Вы услышите запись дважды.</string>
    <string name="listening_task2.1">A. Viola\'s parents don\'t pay attention when their son is crying.\nB. Daniel finds it normal when men express their sadness in the form of crying.\nC. Viola remembers her childhood and the boy who cried.\nD. Attitudes to men\'s emotional expressions are different.\nE. Viola dislikes the traditions of Chile.\nF. Daniel is sure that small children should be encouraged to cry.\nG. According to Daniel, expressing emotions is worthy of respect.</string>
    <string name="listening_task3.0">Вы услышите интервью. В заданиях 3–9 запишите в поле ответа цифру 1, 2 или 3, соответствующую выбранному Вами варианту ответа. Вы услышите запись дважды.</string>
    <string name="listening_task3.1" >When is Jacky’s birthday?\n1) Today\n2) Tomorrow\n3) On Wednesday\n\nWhich is TRUE about Jacky and her husband?\n1) They’ve been married for 75 years.\n2) They both love coconut cakes.\n3) They are the same age.\n\nWhen she was a teenager, Jacky helped her mom\n1) sell subscriptions to the newspaper.\n2) write news about World War II.\n3) do what she was asked to.\n\nAt the end of the war Jacky’s husband found himself in\n1) Sussex.\n2) Tennessee.\n3) the Far East.\n\nHow many years did Jacky write for the newspaper?\n1) 25\n2) 33\n3) 84\n\nJacky’s fans liked reading her column because it\n1) covered different topics.\n2) was written in an authoritative tone.\n3) gave an honest point view.\n\nDuring the meetings of the board of directors, Jacky used to\n1) listen to others rather than speak.\n2) ask many questions.\n3) make everyone do what she wants.
     </string>
</resources>