<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_2"
    tools:context=".writing.WritingSectionTask1">

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_writing_section_button_t1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toStartOf="@+id/writing_section_task_1_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/writing_section_task_1_title"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginEnd="176dp"
        android:fontFamily="@font/allerta"
        android:text="@string/writing_section"
        android:textAlignment="textStart"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/writing_section_task_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allerta"
        android:text="@string/Task_1"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/writing_section_task_1_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/writing_section_task_1_exercise"
        android:layout_width="390dp"
        android:layout_height="78dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/allerta"
        android:text="@string/writing_section_task_1_exercise"
        android:textAlignment="center"
        android:textColor="@color/dark_purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="104dp"
        android:background="@android:color/transparent"
        android:rotation="12"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <TableLayout
        android:id="@+id/writing_section_email_constructor"
        android:layout_width="388dp"
        android:layout_height="120dp"
        android:background="@color/opacity_lavender"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writing_section_task_1_exercise"
        app:layout_constraintVertical_bias="0.084">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/allerta"
                android:text="From:"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/allerta"
                android:text="@string/email_from"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/allerta"
                android:text="To:"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/allerta"
                android:text="@string/email_to"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/allerta"
                android:text="Subject:"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/allerta"
                android:text="@string/email_subject"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/writing_section_task_1_email_text"
        android:layout_width="388dp"
        android:layout_height="120dp"
        android:layout_marginBottom="204dp"
        android:background="@color/opacity_lavender"
        android:fontFamily="@font/allerta"
        android:text="@string/email_text"
        android:textAlignment="textStart"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writing_section_email_constructor"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/writing_section_emails_writing_exercise"
        android:layout_width="386dp"
        android:layout_height="85dp"
        android:fontFamily="@font/allerta"
        android:text="@string/email_writing_exercise"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writing_section_task_1_email_text"
        app:layout_constraintVertical_bias="0.107" />

    <TextView
        android:id="@+id/writing_section_emails_writing_rules"
        android:layout_width="386dp"
        android:layout_height="85dp"
        android:fontFamily="@font/allerta"
        android:text="@string/email_writing_rule"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="italic"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writing_section_emails_writing_exercise"
        app:layout_constraintVertical_bias="0.107" />


</androidx.constraintlayout.widget.ConstraintLayout>