<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_2"
    tools:context=".reading.ReadingTask2">
<View
android:id="@+id/divider"
android:layout_width="0dp"
android:layout_height="4dp"
android:layout_marginStart="1dp"
android:layout_marginTop="75dp"
android:layout_marginEnd="1dp"
android:background="?android:attr/listDivider"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent" />

<ImageButton
android:id="@+id/back_reading_section_button"
android:layout_width="60dp"
android:layout_height="60dp"
android:background="@android:color/transparent"
app:layout_constraintBottom_toTopOf="@+id/divider"
app:layout_constraintEnd_toStartOf="@+id/reading_title_task2"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent"
app:srcCompat="?attr/actionModeCloseDrawable"
tools:ignore="SpeakableTextPresentCheck" />

<TextView
android:id="@+id/reading_title_task2"
android:layout_width="150dp"
android:layout_height="40dp"
android:layout_marginEnd="176dp"
android:fontFamily="@font/allerta"
android:text="@string/reading_section"
android:textAlignment="center"
android:textSize="30dp"
android:textStyle="bold"
app:layout_constraintBottom_toTopOf="@+id/divider"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintTop_toTopOf="parent" />

<TextView
android:id="@+id/reading_section_task_2"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:fontFamily="@font/allerta"
android:text="@string/Task_2"
android:textAlignment="center"
android:textSize="16dp"
android:textStyle="bold"
app:layout_constraintBottom_toTopOf="@+id/divider"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toEndOf="@+id/reading_title_task2"
app:layout_constraintTop_toTopOf="parent" />

<TextView
android:id="@+id/exercise_task2"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="30dp"
android:fontFamily="@font/allerta"
android:text="@string/reading_exercise_task2"
android:textAlignment="center"
android:textColor="@color/dark_purple"
android:textSize="20dp"
android:textStyle="bold"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="@+id/divider" />

    <TextView
        android:id="@+id/reading_section_answers_textView2"
        android:layout_width="232dp"
        android:layout_height="29dp"
        android:layout_marginBottom="72dp"
        android:fontFamily="@font/allerta"
        android:textAlignment="center"
        android:text="@string/reading_answers_task2"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/exercise_view_task2"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:background="@color/main_theme50"
        android:fontFamily="@font/allerta"
        android:text="@string/reading_exercise_view_task2"
        android:textAlignment="center"
        android:textColor="@color/dark_purple"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_task2" />

    <RadioGroup
        android:id="@+id/reading_task_2_radioButton_group"
        android:layout_width="371dp"
        android:layout_height="122dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_view_task2">

        <RadioButton
            android:id="@+id/reading_task2_radioButton_A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allerta"
            android:minHeight="48dp"
            android:text="@string/reading_task2_RB.A"
            android:textSize="16dp"
            android:textStyle="bold"
            android:theme="@style/MyRadioButtonGreen" />

        <RadioButton
            android:id="@+id/reading_task2_radioButton_B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allerta"
            android:text="@string/reading_task2_RB.B"
            android:textSize="16dp"
            android:textStyle="bold"
            android:theme="@style/MyRadioButtonRed"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/reading_task2_radioButton_C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allerta"
            android:text="@string/reading_task2_RB.C"
            android:textSize="16dp"
            android:textStyle="bold"
            android:theme="@style/MyRadioButtonRed"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <Button
        android:id="@+id/reading_task_2_check_answer"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/opacity_pale_violet_red"
        android:fontFamily="@font/allerta"
        android:text="@string/Check_answer"
        android:textColor="@color/dark_purple"
        android:textSize="15dp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/main_theme"
        tools:ignore="TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>